[package]
name = "rust-rcon"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"
license = "MIT"
description = "A Rust Server RCON Tool"
documentation = "https://docs.rs/rust-rcon"
repository = "https://github.com/chronophylos/rust-rcon"
homepage = "https://github.com/chronophylos/rust-rcon"

[dependencies]
tungstenite = { version = "0.12.0", default-features = false }
env_logger = "0.8.2"
anyhow = "1.0.38"
url = "2.2.0"
serde_json = "1.0.61"
serde = { version = "1.0.120", features = ["derive"] }
log = "0.4.13"
clap = "2.33.3"
