[package]
name = "rust-rcon"
version = "0.1.1"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"
license = "MIT"
description = "A Rust Server RCON Tool"
documentation = "https://docs.rs/rust-rcon"
repository = "https://github.com/chronophylos/rust-rcon"
homepage = "https://github.com/chronophylos/rust-rcon"

[dependencies]
tungstenite = { version = "0.12.0", default-features = false }
env_logger = { version = "0.8.2", default-features = false }
anyhow = "1.0.38"
log = "0.4.13"
clap = "2.33.3"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
