[package]
name = "rust-rcon"
version = "0.1.1"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2021"
license = "MIT"
description = "A Rust Server RCON Tool"
documentation = "https://docs.rs/rust-rcon"
repository = "https://github.com/chronophylos/rust-rcon"
homepage = "https://github.com/chronophylos/rust-rcon"

[dependencies]
tungstenite = { version = "0.17.2", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
anyhow = "1.0.56"
log = "0.4.16"
clap = { version = "3.1.8", default-features = false, features = ["std"] }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
